--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div class="opers">
         <button>+</button>
         <button>-</button>
+        <button>*</button>
+        <button>/</button>
     </div>
     <button class="eq">=</button>
     
